<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright [2019] [SoftBank Robotics China Corp]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingLeft="@dimen/main_padding"
    android:paddingRight="@dimen/main_padding"
    tools:context=".launcher.LauncherActivity">

    <TextView
        android:id="@+id/txt_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_common_80dp"
        android:text="@string/welcome_pet_store"
        android:textColor="@color/white"
        android:textSize="@dimen/text_common_22sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_lay_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_dance"
            android:layout_width="@dimen/width_common_60dp"
            android:layout_height="@dimen/height_common_60dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_common_50dp"
            android:layout_marginRight="@dimen/margin_common_50dp"
            android:background="@drawable/bg_shape_white_cir"
            android:gravity="center"
            android:text="@string/dance"
            android:textColor="@color/black"
            android:textSize="@dimen/text_common_20sp" />

        <TextView
            android:id="@+id/txt_pets"
            android:layout_width="@dimen/width_common_60dp"
            android:layout_height="@dimen/height_common_60dp"
            android:layout_toLeftOf="@id/txt_dance"
            android:background="@drawable/bg_shape_white_cir"
            android:gravity="center"
            android:text="@string/pet_store_home"
            android:textColor="@color/black"
            android:textSize="@dimen/text_common_15sp" />

        <TextView
            android:id="@+id/txt_take_photo"
            android:layout_width="@dimen/width_common_60dp"
            android:layout_height="@dimen/height_common_60dp"
            android:layout_toRightOf="@id/txt_dance"
            android:background="@drawable/bg_shape_white_cir"
            android:gravity="center"
            android:text="@string/main_take_photo"
            android:textColor="@color/black"
            android:textSize="@dimen/text_common_20sp" />

    </RelativeLayout>

</RelativeLayout>