<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright [2019] [SoftBank Robotics China Corp]
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_shape_white"
        android:elevation="1dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/take_photo_print_guide"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="visible" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40.0dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="40.0dip"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/store_cancel"
                android:visibility="visible"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/line_color" />

            <Button
                android:id="@+id/btn_sure"
                android:layout_width="0dip"
                android:layout_height="40.0dip"
                android:layout_weight="1"
                android:layout_marginLeft="20.0dip"
                android:background="@null"
                android:gravity="center"
                android:text="@string/store_sure"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>